--- a/projects.html
+++ b/projects.html
@@ -51,16 +51,18 @@
 				<h2>Projects</h2>
 			</header>
 
-			<section id="projects" class="posts">
+			<section id="projects" class="projects-list">
 				<article class="project">
 					<header class="major">
 						<a href="https://github.com/Jasna-Budhathoki/geohash" class="image fit"><img src="images/Geohash-grid.png"
 								alt="" /></a>
-						<h2><a href="https://github.com/Jasna-Budhathoki/geohash">Geohash Encoder and Decoder<br /></a></h2>
-						<p class="project-description">This projects contains a geohash encoder and a geohash decoder. Geohash
-							Encoder coverts a tuple of latitude and longitude to its corresponding geohash. This program converts a
-							given latitude and longitude to an 8 characters long geohash, which has an error rate of ±19 meters. A
-							geohash decoder converts a geohash into its corresponding tuple of latitude and longitude.</p>
+						<div class="project-content">
+							<h2><a href="https://github.com/Jasna-Budhathoki/geohash">Geohash Encoder and Decoder<br /></a></h2>
+							<p class="project-description">This projects contains a geohash encoder and a geohash decoder. Geohash
+								Encoder coverts a tuple of latitude and longitude to its corresponding geohash. This program converts a
+								given latitude and longitude to an 8 characters long geohash, which has an error rate of ±19 meters. A
+								geohash decoder converts a geohash into its corresponding tuple of latitude and longitude.</p>
+						</div>
 					</header>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jasna-Budhathoki/geohash" class="button">View Project</a></li>
@@ -71,15 +73,17 @@
 					<header class="major">
 						<a href="https://github.com/Jasna-Budhathoki/chatgpt_tweets-analysis" class="image fit"><img
 								src="images/ChatGPT.jpeg" alt="" /></a>
-						<h2><a href="https://github.com/Jasna-Budhathoki/chatgpt_tweets-analysis">Sentiment Analysis on ChatGPT
-								Tweets<br />
-							</a></h2>
-						<p class="project-description">ChatGPT is a popular and fast growing artificial intelligence program that
-							has the ability to to assist and converse with humans in natural language. With the growing number of
-							users, there have been different responses to the AI, with some praising ChatGPT highly while others have
-							raised criticism and concerns. The goal of this project is to use sentiment analysis to classify ChatGPT
-							tweets as Positive, Negative, or Neutral from the timeframe November 2022 (when the software first
-							launched) to January 2023. </p>
+						<div class="project-content">
+							<h2><a href="https://github.com/Jasna-Budhathoki/chatgpt_tweets-analysis">Sentiment Analysis on ChatGPT
+									Tweets<br />
+								</a></h2>
+							<p class="project-description">ChatGPT is a popular and fast growing artificial intelligence program that
+								has the ability to to assist and converse with humans in natural language. With the growing number of
+								users, there have been different responses to the AI, with some praising ChatGPT highly while others have
+								raised criticism and concerns. The goal of this project is to use sentiment analysis to classify ChatGPT
+								tweets as Positive, Negative, or Neutral from the timeframe November 2022 (when the software first
+								launched) to January 2023. </p>
+						</div>
 					</header>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jasna-Budhathoki/chatgpt_tweets-analysis" class="button">View Project</a>
@@ -91,14 +95,16 @@
 					<header class="major">
 						<a href="https://github.com/Jasna-Budhathoki/GuessingGame" class="image fit"><img
 								src="images/guessing_game.jpeg" alt="" /></a>
-						<h2><a href="https://github.com/Jasna-Budhathoki/GuessingGame">Guessing Game<br />
-							</a></h2>
-						<p class="project-description">In the classic Twenty Questions game, one person thinks of
-							something--anything--and other people try to guess the thing by asking yes or no questions to narrow down
-							what sort of thing it is. If they guess it in fewer than 20 questions, they win. In this project, a person
-							plays the 20 Questions game with the computer. In this version of the game, the human thinks of something
-							and the computer will try to guess it.
-						</p>
+						<div class="project-content">
+							<h2><a href="https://github.com/Jasna-Budhathoki/GuessingGame">Guessing Game<br />
+								</a></h2>
+							<p class="project-description">In the classic Twenty Questions game, one person thinks of
+								something--anything--and other people try to guess the thing by asking yes or no questions to narrow down
+								what sort of thing it is. If they guess it in fewer than 20 questions, they win. In this project, a person
+								plays the 20 Questions game with the computer. In this version of the game, the human thinks of something
+								and the computer will try to guess it.
+							</p>
+						</div>
 					</header>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jasna-Budhathoki/GuessingGame" class="button">View Project</a></li>
@@ -109,13 +115,15 @@
 					<header class="major">
 						<a href="https://github.com/Jasna-Budhathoki/haircare-advisor" class="image fit"><img
 								src="images/haircare.jpg" alt="" /></a>
-						<h2><a href="https://github.com/Jasna-Budhathoki/haircare-advisor">Smart Hair Product Recommendation App<br />
-							</a></h2>
-						<p class="project-description">A multimodal AI application that analyzes a user’s hair type, texture, and
-							concerns using computer vision and product-label understanding to deliver personalized hair-care
-							recommendations. The system combines deep learning-based hair classification with ingredient analysis to
-							match users with products tailored to their unique hair needs, moving beyond one-size-fits-all
-							recommendations.</p>
+						<div class="project-content">
+							<h2><a href="https://github.com/Jasna-Budhathoki/haircare-advisor">Smart Hair Product Recommendation App<br />
+								</a></h2>
+							<p class="project-description">A multimodal AI application that analyzes a user’s hair type, texture, and
+								concerns using computer vision and product-label understanding to deliver personalized hair-care
+								recommendations. The system combines deep learning-based hair classification with ingredient analysis to
+								match users with products tailored to their unique hair needs, moving beyond one-size-fits-all
+								recommendations.</p>
+						</div>
 					</header>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jasna-Budhathoki/haircare-advisor" class="button">View Project</a></li>
@@ -126,10 +134,12 @@
 					<header class="major">
 						<a href="https://github.com/Jasna-Budhathoki/RClient" class="image fit"><img src="images/baato.jpeg"
 								alt="" /></a>
-						<h2><a href="https://github.com/Jasna-Budhathoki/RClient">Baato R Client<br />
-							</a></h2>
-						<p class="project-description">Baato is a cloud based geospatial services for developers and businesses in
-							Nepal. Baato R library makes it easy to integrate Baato API into existing projects.</p>
+						<div class="project-content">
+							<h2><a href="https://github.com/Jasna-Budhathoki/RClient">Baato R Client<br />
+								</a></h2>
+							<p class="project-description">Baato is a cloud based geospatial services for developers and businesses in
+								Nepal. Baato R library makes it easy to integrate Baato API into existing projects.</p>
+						</div>
 					</header>
 					<ul class="actions special">
 						<li><a href="https://github.com/Jasna-Budhathoki/RClient" class="button">View Project</a></li>
@@ -139,10 +149,12 @@
 				<article class="project">
 					<header class="major">
 						<div class="image fit"><img src="images/zenithai.jpg" alt="" /></div>
-						<h2>ZenithAI</h2>
-						<p class="project-description">Zenith AI is a personalized AI platform designed to help users learn,
-							reflect, and grow intentionally. It combines adaptive content, micro-learning, and journaling to nudge
-							users away from mindless consumption and toward meaningful engagement.</p>
+						<div class="project-content">
+							<h2>ZenithAI</h2>
+							<p class="project-description">Zenith AI is a personalized AI platform designed to help users learn,
+								reflect, and grow intentionally. It combines adaptive content, micro-learning, and journaling to nudge
+								users away from mindless consumption and toward meaningful engagement.</p>
+						</div>
 					</header>
 				</article>
 			</section>
